(Lab 4 - Huffman) Enable tests

--- a/Program 02 - Huffman Coding/CMakeLists.txt
+++ b/Program 02 - Huffman Coding/CMakeLists.txt
@@ -40,12 +40,12 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
 endif()
 
 
-# # FetchContent added in CMake 3.11, downloads during the configure step
-# include(FetchContent)
-# # FetchContent_MakeAvailable was not added until CMake 3.14
-# if(${CMAKE_VERSION} VERSION_LESS 3.14)
-#     include(cmake/add_FetchContent_MakeAvailable.cmake)
-# endif()
+# FetchContent added in CMake 3.11, downloads during the configure step
+include(FetchContent)
+# FetchContent_MakeAvailable was not added until CMake 3.14
+if(${CMAKE_VERSION} VERSION_LESS 3.14)
+    include(cmake/add_FetchContent_MakeAvailable.cmake)
+endif()
 
 # External libraries
 #add_subdirectory(extern)
@@ -64,7 +64,7 @@ add_subdirectory(app)
 #     include(CTest)
 
 # #    if(BUILD_TESTING)
-#        add_subdirectory(tests)
+        add_subdirectory(tests)
 # #    endif()
 
 #     # Docs only available if this is the main app
