(Lab 4 - Huffman) buildTable(), printCodes(), getCode()
Build a table of the Huffman codes generated by the tree for easy
lookup when encoding.

Also retrieve a code for a character and print all codes in sorted
order.

--- a/Program 02 - Huffman Coding/src/CMakeLists.txt
+++ b/Program 02 - Huffman Coding/src/CMakeLists.txt
@@ -4,9 +4,8 @@ add_library (huffman
 )
 
 # Include the header files
-message("Include directory: ${PROJECT_SOURCE_DIR}/")
 target_include_directories(huffman PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 # Use C++17
-# target_compile_features(huffman PRIVATE cxx_std_17)
+target_compile_features(huffman PRIVATE cxx_std_17)
 
