(Lab 5 and 6 - Priority Queue) Dequeue Test 1
Pass unit test 1, throw exception when attempting to dequeue an empty
list.

--- a/Lab 05 and 06 - Priority Queue/tests/CMakeLists.txt
+++ b/Lab 05 and 06 - Priority Queue/tests/CMakeLists.txt
@@ -8,7 +8,7 @@ FetchContent_MakeAvailable(catch2)
 
 add_executable(priority_test
     test_main.cpp
-    # PriorityQueue_test.cpp
+    PriorityQueue_test.cpp
 )
 
 # Use C++17
